<resources>
    <string name="app_name">Food Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="splash_icon_desc">Icon for Food Buddy</string>

    <!-- Main Activity Strings -->
    <string name="welcome_message">Welcome to FoodBuddy!</string>
    <string name="recents">Recents</string>
    <string name="pinned">Pinned</string>
    <string name="section_empty">Nothing to show here yet!</string>
    <string name="card_icon_desc">Image of</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="about">About</string>
    <string name="about_message">developed by Salil Deshpande\n\nApp Icon developed from
        https://romannurik.github.io/AndroidAssetStudio/icons-launcher.html</string>
    <string name="dialog_positive">OK</string>
    <string name="fab_search_desc">Button to initiate recipe search</string>

    <!-- Strings related to Settings -->
    <string name="pref_name">foodbuddy_prefs</string>
    <string name="pref_category_diet">Diet Filters</string>
    <string-array name="category_diet_entries">
        <item>Low-Carb</item>
        <item>Low-Fat</item>
        <item>High-Fiber</item>
    </string-array>
    <string-array name="category_diet_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="category_diet_default">-1</string>

    <string name="pref_category_health">Health Filters</string>
    <string-array name="category_health_entries">
        <item>Vegan</item>
        <item>Vegetarian</item>
        <item>Gluten-Free</item>
    </string-array>
    <string-array name="category_health_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="category_health_default">-1</string>

    <!-- First run Dialog Box Strings -->
    <string name="first_run_pref">Preferences</string>
    <string name="first_run_welcome">Welcome to Food Buddy! Would you like to set your preferences now,
    to ensure a personalized experience?</string>
    <string name="dialog_positive_btn">Yes, sure!</string>
    <string name="dialog_negative_btn">No, later</string>

    <!-- Search Activity Strings -->
    <string name="title_activity_search">Search</string>
    <string name="search_hint">Enter recipe name or ingredient</string>
    <string name="error_loading_data">Error loading data from server</string>
    <string name="no_result_data">Search query did not match any recipe</string>

    <!-- Recipe Activity Strings -->
    <string name="title_activity_recipe">FoodBuddy</string>
    <string name="recipe_image_content_description">Image of recipe</string>
    <string name="error_loading_recipe">Error Loading Recipe</string>
    <string name="tag_desc">Tags:</string>
    <string name="caution_desc">Caution:</string>
    <string name="recipe_lines_desc">Recipe:</string>
    <string name="nutritional_values">Nutritional Values</string>
    <string name="view_recipe_button">Click Here</string>
    <string name="view_recipe_text">to view entire recipe</string>
    <string name="pin_off_content_description">Toggle Button: Recipe is not pinned</string>
    <string name="pin_on_content_description">Toggle Button: Recipe is pinned</string>
    <string name="pin_add_success">Recipe successfully pinned</string>
    <string name="pin_remove_success">Recipe successfully unpinned</string>
    <string name="energy">Energy(Kcal)</string>
    <string name="fats">Fat(g)</string>
    <string name="carbs">Carbohydrates(g)</string>
    <string name="fibers">Fiber(g)</string>
    <string name="sugar">Sugar(g)</string>
    <string name="protein">Protein(g)</string>

    <!-- AdMob Strings -->
    <!--<string name="bottom_banner_unit_id">ca-app-pub-5513945020155393/9987959269</string>-->
    <string name="bottom_banner_unit_id">ca-app-pub-3940256099942544/6300978111</string><!-- Dummy ad -->
    <!--<string name="interstitial_unit_id">ca-app-pub-5513945020155393/8282396865</string>-->
    <string name="interstitial_unit_id">ca-app-pub-3940256099942544/1033173712</string><!-- Dummy ad -->

    <!-- Widget Strings -->
    <string name="widget_recipe">Recipe Widget</string>
    <string name="widget_empty">No Pinned Recipes!</string>
    <string name="content_desc_widget_image">Image for recipe</string>
</resources>
