<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="in.codestar.foodbuddy.RecipeActivity"
    tools:showIn="@layout/activity_recipe">

    <LinearLayout
        android:id="@+id/recipe_linear_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/recipe_image_view"
            android:contentDescription="@string/recipe_image_content_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/recipe_image_height" />

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:minHeight="@dimen/circle_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/recipe_title_text_view"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/title_text_size"
                android:layout_weight="1"
                android:paddingLeft="@dimen/content_padding_horizontal"
                android:paddingRight="@dimen/content_padding_horizontal"
                android:paddingTop="@dimen/content_padding_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <ToggleButton
                android:id="@+id/pin_recipe_button"
                android:background="@drawable/circle_pin_background"
                android:foreground="@drawable/pin_toggle_selector"
                android:textOff=""
                android:textOn=""
                android:padding="@dimen/pin_margin"
                android:layout_margin="@dimen/pin_margin"
                android:layout_width="@dimen/pin_icon_width"
                android:layout_height="@dimen/pin_icon_height"/>
        </LinearLayout>

        <TextView
            android:id="@+id/recipe_tags_text_view"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/tag_text_size"
            android:paddingLeft="@dimen/tag_padding_horizontal"
            android:paddingRight="@dimen/tag_padding_horizontal"
            android:paddingTop="@dimen/tag_padding_vertical"
            android:paddingBottom="@dimen/tag_padding_vertical"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/recipe_caution_text_view"
            android:textColor="@color/colorCautionText"
            android:textSize="@dimen/tag_text_size"
            android:paddingLeft="@dimen/tag_padding_horizontal"
            android:paddingRight="@dimen/tag_padding_horizontal"
            android:paddingBottom="@dimen/tag_padding_vertical"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/recipe_content_text_view"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/content_text_size"
            android:paddingLeft="@dimen/content_padding_horizontal"
            android:paddingRight="@dimen/content_padding_horizontal"
            android:paddingTop="@dimen/content_padding_vertical"
            android:paddingBottom="@dimen/content_padding_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/content_padding_horizontal"
            android:paddingRight="@dimen/content_padding_horizontal"
            android:paddingTop="@dimen/content_padding_vertical"
            android:paddingBottom="@dimen/content_padding_vertical"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <TextView
                android:text="@string/nutritional_values"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/content_text_size"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/nutrition_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/content_padding_horizontal"
                android:paddingRight="@dimen/content_padding_horizontal"
                android:paddingTop="@dimen/content_padding_vertical"
                android:paddingBottom="@dimen/content_padding_vertical" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_margin_bottom">

            <Button
                android:id="@+id/view_recipe_button"
                android:text="@string/view_recipe_button"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/colorTransparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/view_recipe_text"
                android:textSize="@dimen/subcontent_text_size"
                android:textColor="@color/colorPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
